--- a/index.html
+++ b/index.html
@@ -3,4 +3,13 @@
     <link rel="stylesheet" type="text/css" href="fonts/fontawesome/fontawesome.css"></link><!--Icons-->
     <link rel="stylesheet" type="text/css" href="./css/root.css"></link>
     <script type="text/javascript" src="./js/jquery.min.js"></script>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0"> 
+    <title>Eggcellent Pics</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 </head>
+
+<body>
+
+</body>
