--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0"> 
     <title>Eggcellent Pics</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="pics/general/favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
+    <nav>
 
+    </nav>
+    <header>
+
+    </header>
 </body>
