--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&family=Archivo+Black">
     <link rel="stylesheet" type="text/css" href="fonts/fontawesome/fontawesome.css"></link><!--Icons-->
     <link rel="stylesheet" type="text/css" href="./css/root.css"></link>
     <script type="text/javascript" src="./js/jquery.min.js"></script>
@@ -11,10 +12,27 @@
 </head>
 
 <body>
-    <nav>
-
-    </nav>
-    <header>
-
+    <header class = flexBox>
+        <div class = "textBox flexBox title">
+            <a>
+                <h1>
+                    <span>E</span><span>g</span><span>g</span><span>c</span><span>e</span><span>l</span><span>l</span><span>e</span><span>n</span><span>t</span>
+                </h1>
+                <h1>
+                    <span>P</span><span>i</span><span>c</span><span>s</span>
+                </h1>
+            </a>
+        </div>
+        <nav class = "flexBox">
+            <a>About</a>
+            <a>Work</a>
+            <a>Contact</a>
+            <a><img src = "pics/social/instagramYellow.svg" alt = "Instagram"></a>
+            <a><img src = "pics/social/facebookYellow.svg" alt = "Facebook"></a>
+        </nav>
     </header>
+    
+    <main>
+        
+    </main>
 </body>
