Update index and index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&family=Archivo+Black">
     <link rel="stylesheet" type="text/css" href="fonts/fontawesome/fontawesome.css"></link><!--Icons-->
+    <link rel="stylesheet" type="text/css" href="./css/headFoot.css"></link>
     <link rel="stylesheet" type="text/css" href="./css/root.css"></link>
     <script type="text/javascript" src="./js/jquery.min.js"></script>
 
