update index files

--- a/index.html
+++ b/index.html
@@ -38,24 +38,24 @@
         <section class = "titlePics flexBox">
             <div class = "row flexBox">
                 <div class = "pic flexBox">
-                    <img src = "pics/general/titleImg1.jpg">
+                    <img src = "pics/general/titleImg1.JPG">
                     <p>4th of July Fireworks</p>
                     <p>Lake Winnipesaukee, NH</p>
                 </div>
                 <div class = "pic flexBox">
-                    <img src = "pics/general/titleImg2.jpg">
+                    <img src = "pics/general/titleImg2.JPG">
                     <p>R/V Virgina</p>
                     <p>Annapolis, MD</p>
                 </div>
             </div>
             <div class = "row flexBox">
                 <div class = "pic flexBox">
-                    <img src = "pics/general/titleImg3.jpg">
+                    <img src = "pics/general/titleImg3.JPG">
                     <p>Safe Harbor</p>
                     <p>Annapolis, MD</p>
                 </div>
                 <div class = "pic flexBox">
-                    <img src = "pics/general/titleImg4.jpg">
+                    <img src = "pics/general/titleImg4.JPG">
                     <p>New England Sunset</p>
                     <p>Lake Winnipesaukee, NH</p>
                 </div>
