--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class = flexBox>
         <div class = "textBox flexBox title">
-            <a>
+            <a href = "./index">
                 <h1>
                     <span>E</span><span>g</span><span>g</span><span>c</span><span>e</span><span>l</span><span>l</span><span>e</span><span>n</span><span>t</span>
                 </h1>
@@ -26,7 +26,7 @@
             </a>
         </div>
         <nav class = "flexBox">
-            <a>About</a>
+            <a href = "./about">About</a>
             <a>Work</a>
             <a>Contact</a>
             <a href = "https://instagram.com/eggcellent_pics" target = "_blank"><img src = "pics/social/instagramYellow.svg" alt = "Instagram"></a>
@@ -38,27 +38,32 @@
         <section class = "titlePics flexBox">
             <div class = "row flexBox">
                 <div class = "pic flexBox">
-                    <img src = "pics/general/titleImg1.JPG">
+                    <img src = "pics/general/titleImg1.JPG" alr = "Person in front of fireworks on Lake Winnipesaukee">
                     <p>4th of July Fireworks</p>
                     <p>Lake Winnipesaukee, NH</p>
                 </div>
                 <div class = "pic flexBox">
-                    <img src = "pics/general/titleImg2.JPG">
+                    <img src = "pics/general/titleImg2.JPG" alt = "R/V Virigia docking in Annapolis harbor">
                     <p>R/V Virgina</p>
                     <p>Annapolis, MD</p>
                 </div>
             </div>
             <div class = "row flexBox">
                 <div class = "pic flexBox">
-                    <img src = "pics/general/titleImg3.JPG">
+                    <img src = "pics/general/titleImg3.JPG" alt = "Sailboat at anchor in Annapolis harbor">
                     <p>Safe Harbor</p>
                     <p>Annapolis, MD</p>
                 </div>
                 <div class = "pic flexBox">
-                    <img src = "pics/general/titleImg4.JPG">
+                    <img src = "pics/general/titleImg4.JPG" alt = "Sunset on Lake Winnipesaukee">
                     <p>New England Sunset</p>
                     <p>Lake Winnipesaukee, NH</p>
                 </div>
+            </div>
+        </section>
+        <section class = "contactImg">
+            <div class = "content flexBox">
+                <a href = "contact">Contact Me</a>
             </div>
         </section>
     </main>
@@ -67,7 +72,7 @@
 		<div class = "content">
 			<div class = "logo">
                 <div class = "textBox flexBox title">
-                    <a>
+                    <a href = "index">
                         <h1>
                             <span>E</span><span>g</span><span>g</span><span>c</span><span>e</span><span>l</span><span>l</span><span>e</span><span>n</span><span>t</span>
                         </h1>
@@ -84,16 +89,17 @@
 			<div class = "centerDivider"></div>
 			<div class = "sitemap">
 				<ul class = "flexBox">
-					<li><a href = "./index.html">Home</a></li>
-					<li><a>About</a></li>
-					<li><a>Work</a></li>
-					<li><a>Contact</a></li>
+					<li><a href = "./index">Home</a></li>
+					<li><a href = "./about">About</a></li>
+					<li><a href = "images">Work</a></li>
+					<li><a href = "contact">Contact</a></li>
 				</ul>
 			</div>
 		</div>
 		<div class = "copywrite">
+            <p>Not affiliated with or endorced by the DoD, USN, or USNA</p>
 			<p>Eggcellent Pictures</p>
-			<p>&copy2023 Ben Sprague</p>
+			<p>&copy2023 Ben Sprague (like egg)</p>
 		</div>
 	</footer>
 </body>
