--- a/about.html
+++ b/about.html
@@ -3,20 +3,19 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&family=Archivo+Black">
     <link rel="stylesheet" type="text/css" href="fonts/fontawesome/fontawesome.css"></link><!--Icons-->
     <link rel="stylesheet" type="text/css" href="./css/headFoot.css"></link>
-    <link rel="stylesheet" type="text/css" href="./css/root.css"></link>
+    <link rel="stylesheet" type="text/css" href="./css/about.css"></link>
     <script type="text/javascript" src="./js/jquery.min.js"></script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0"> 
     <title>Eggcellent Pics</title>
     <link rel="shortcut icon" href="pics/general/favicon.ico" type="image/x-icon" />
-    <script type="text/javascript" src = "js/index.js"></script>
 </head>
 
 <body>
     <header class = flexBox>
         <div class = "textBox flexBox title">
-            <a href = "./index">
+            <a href = "index.html">
                 <h1>
                     <span>E</span><span>g</span><span>g</span><span>c</span><span>e</span><span>l</span><span>l</span><span>e</span><span>n</span><span>t</span>
                 </h1>
@@ -26,53 +25,58 @@
             </a>
         </div>
         <nav class = "flexBox">
-            <a href = "./about">About</a>
-            <a>Work</a>
-            <a>Contact</a>
+            <a href = "./about.html">About</a>
+            <a href = "images.html">Work</a>
+            <a href = "contact.html">Contact</a>
             <a href = "https://instagram.com/eggcellent_pics" target = "_blank"><img src = "pics/social/instagramYellow.svg" alt = "Instagram"></a>
             <a href = "https://facebook.com/profile.php?id=100094181783913" target = "_blank"><img src = "pics/social/facebookYellow.svg" alt = "Facebook"></a>
         </nav>
     </header>
     
     <main>
-        <section class = "titlePics flexBox">
-            <div class = "row flexBox">
-                <div class = "pic flexBox">
-                    <img src = "pics/general/titleImg1.JPG" alr = "Person in front of fireworks on Lake Winnipesaukee">
-                    <p>4th of July Fireworks</p>
-                    <p>Lake Winnipesaukee, NH</p>
-                </div>
-                <div class = "pic flexBox">
-                    <img src = "pics/general/titleImg2.JPG" alt = "R/V Virigia docking in Annapolis harbor">
-                    <p>R/V Virgina</p>
-                    <p>Annapolis, MD</p>
-                </div>
+       <section class = "about flexBox row">
+            <div class = "pic">
+                <img src = "pics/general/ben.jpg" alt = "Picture of Ben">
+                <p>A quick picture snapped as I was hanging set for a production of 42nd Street.</p>
             </div>
-            <div class = "row flexBox">
-                <div class = "pic flexBox">
-                    <img src = "pics/general/titleImg3.JPG" alt = "Sailboat at anchor in Annapolis harbor">
-                    <p>Safe Harbor</p>
-                    <p>Annapolis, MD</p>
-                </div>
-                <div class = "pic flexBox">
-                    <img src = "pics/general/titleImg4.JPG" alt = "Sunset on Lake Winnipesaukee">
-                    <p>New England Sunset</p>
-                    <p>Lake Winnipesaukee, NH</p>
-                </div>
-            </div>
-        </section>
-        <section class = "contactImg">
             <div class = "content flexBox">
-                <a href = "contact">Contact Me</a>
+                <h1>Meet Ben</h1>
+                <p>Welcome to the captivating world of Ben, an Annapolis-based hobbyist photographer 
+                    with an adventurous spirit. As a midshipman at the US Naval Academy, Ben's lens 
+                    documents his life there, offering a unique glimpse into the corridors, classrooms, 
+                    and camaraderie that define his journey.</p>
+                <p>However, his love for photography extends 
+                    beyond campus boundaries, leading him to explore landscapes and capture the essence 
+                    of individuals through captivating portraits. With each click, Ben freezes fleeting
+                    moments, sharing his joy, wonder, and love for life through his vibrant and 
+                    expressive images. Join him on an extraordinary visual adventure, where ordinary 
+                    moments become extraordinary tales waiting to be discovered.</p>
             </div>
-        </section>
+       </section>
+       <section class = "intrests flexBox">
+        <div class = "pic">
+            <img src = "pics/general/creativeVision.jpg" alt = "Sunset at the Naval Academy with a lightpost in the foreground">
+            <p>A June sunset at the Naval Academy</p>
+        </div>
+        <div class = "content flexBox">
+            <h1>Creative Intrests</h1>
+            <p>I am activly exploring many different subjects and styles of photography, 
+                but here's what I'm most intrested in right now:
+            </p>
+            <ul>
+                <li>Life around the Naval Academy (with a special focus on the US Naval Academy Drum and Bugle Corps)</li>
+                <li>Nautical Subjects (especially sailing vessels)</li>
+                <li>Nature and Landscape Photography</li>
+            </ul>
+        </div>
+   </section>
     </main>
 
     <footer>
 		<div class = "content">
 			<div class = "logo">
                 <div class = "textBox flexBox title">
-                    <a href = "index">
+                    <a href = "index.html">
                         <h1>
                             <span>E</span><span>g</span><span>g</span><span>c</span><span>e</span><span>l</span><span>l</span><span>e</span><span>n</span><span>t</span>
                         </h1>
@@ -89,10 +93,10 @@
 			<div class = "centerDivider"></div>
 			<div class = "sitemap">
 				<ul class = "flexBox">
-					<li><a href = "./index">Home</a></li>
-					<li><a href = "./about">About</a></li>
-					<li><a href = "images">Work</a></li>
-					<li><a href = "contact">Contact</a></li>
+					<li><a href = "./index.html">Home</a></li>
+					<li><a href = "about.html">About</a></li>
+					<li><a href = "images.html">Work</a></li>
+					<li><a href = "contact.html">Contact</a></li>
 				</ul>
 			</div>
 		</div>
