--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class = flexBox>
         <div class = "textBox flexBox title">
-            <a href = "./index">
+            <a href = "./index.html">
                 <h1>
                     <span>E</span><span>g</span><span>g</span><span>c</span><span>e</span><span>l</span><span>l</span><span>e</span><span>n</span><span>t</span>
                 </h1>
@@ -26,9 +26,9 @@
             </a>
         </div>
         <nav class = "flexBox">
-            <a href = "./about">About</a>
-            <a>Work</a>
-            <a>Contact</a>
+            <a href = "./about.html">About</a>
+            <a href = "images.html">Work</a>
+            <a href = "contact.html">Contact</a>
             <a href = "https://instagram.com/eggcellent_pics" target = "_blank"><img src = "pics/social/instagramYellow.svg" alt = "Instagram"></a>
             <a href = "https://facebook.com/profile.php?id=100094181783913" target = "_blank"><img src = "pics/social/facebookYellow.svg" alt = "Facebook"></a>
         </nav>
@@ -63,7 +63,7 @@
         </section>
         <section class = "contactImg">
             <div class = "content flexBox">
-                <a href = "contact">Contact Me</a>
+                <a href = "contact.html">Contact Me</a>
             </div>
         </section>
     </main>
@@ -72,7 +72,7 @@
 		<div class = "content">
 			<div class = "logo">
                 <div class = "textBox flexBox title">
-                    <a href = "index">
+                    <a href = "index.html">
                         <h1>
                             <span>E</span><span>g</span><span>g</span><span>c</span><span>e</span><span>l</span><span>l</span><span>e</span><span>n</span><span>t</span>
                         </h1>
@@ -89,10 +89,10 @@
 			<div class = "centerDivider"></div>
 			<div class = "sitemap">
 				<ul class = "flexBox">
-					<li><a href = "./index">Home</a></li>
-					<li><a href = "./about">About</a></li>
-					<li><a href = "images">Work</a></li>
-					<li><a href = "contact">Contact</a></li>
+					<li><a href = "./index.html">Home</a></li>
+					<li><a href = "about.html">About</a></li>
+					<li><a href = "images.html">Work</a></li>
+					<li><a href = "contact.html">Contact</a></li>
 				</ul>
 			</div>
 		</div>
