Add images page and other updates

--- a/images.html
+++ b/images.html
@@ -15,7 +15,7 @@
 <body>
     <header class = flexBox>
         <div class = "textBox flexBox title">
-            <a href = "index">
+            <a href = "index.html">
                 <h1>
                     <span>E</span><span>g</span><span>g</span><span>c</span><span>e</span><span>l</span><span>l</span><span>e</span><span>n</span><span>t</span>
                 </h1>
@@ -26,7 +26,7 @@
         </div>
         <nav class = "flexBox">
             <a href = "./about.html">About</a>
-            <a href = "images.html">Work</a>
+            <a href = "images.html" id ="current">Work</a>
             <a href = "contact.html">Contact</a>
             <a href = "https://instagram.com/eggcellent_pics" target = "_blank"><img src = "pics/social/instagramYellow.svg" alt = "Instagram"></a>
             <a href = "https://facebook.com/profile.php?id=100094181783913" target = "_blank"><img src = "pics/social/facebookYellow.svg" alt = "Facebook"></a>
@@ -35,13 +35,46 @@
     
     <main>
        <section class = "gallery flexBox">
-            <div class = "column">
+            <h1>Around the Naval Academy</h1>
+            <h2>Annapolis, MD</h2>
+            <div class = "flexBox row">
                 <div class = "pic">
-                    <img src = "pics/general/ben.jpg" alt = "Picture of Ben">
-                    <p>A quick picture snapped as I was hanging set for a production of 42nd Street.</p>
+                    <img src = "pics/gallery/USNA/1.JPG" alt = "Picture of Ben">
+                </div>
+                <div class = "pic">
+                    <img src = "pics/gallery/USNA/2.JPG" alt = "Picture of Ben">
+                </div>
+                <div class = "pic">
+                    <img src = "pics/gallery/USNA/3.JPG" alt = "Picture of Ben">
                 </div>
             </div>
        </section>
+       <section class = "gallery flexBox">
+        <h1>New England 4th of July</h1>
+        <h2>Lake Winnipesaukee, NH</h2>
+        <div class = "flexBox row">
+            <div class = "pic">
+                <img src = "pics/gallery/Winnie4July/1.JPG" alt = "Picture of Ben">
+            </div>
+            <div class = "pic">
+                <img src = "pics/gallery/Winnie4July/2.JPG" alt = "Picture of Ben">
+            </div>
+            <div class = "pic">
+                <img src = "pics/gallery/Winnie4July/3.JPG" alt = "Picture of Ben">
+            </div>
+        </div>
+        <div class = "flexBox row">
+            <div class = "pic">
+                <img src = "pics/gallery/Winnie4July/4.JPG" alt = "Picture of Ben">
+            </div>
+            <div class = "pic">
+                <img src = "pics/gallery/Winnie4July/5.JPG" alt = "Picture of Ben">
+            </div>
+            <div class = "pic">
+                <img src = "pics/gallery/Winnie4July/6.JPG" alt = "Picture of Ben">
+            </div>
+        </div>
+   </section>
     </main>
 
     <footer>
