--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
             </a>
         </div>
         <nav class = "flexBox">
-            <a href = "./about.html">About</a>
+            <a href = "./about.html" id ="current">About</a>
             <a href = "images.html">Work</a>
             <a href = "contact.html">Contact</a>
             <a href = "https://instagram.com/eggcellent_pics" target = "_blank"><img src = "pics/social/instagramYellow.svg" alt = "Instagram"></a>
