--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         <nav class = "flexBox">
             <a href = "./about.html">About</a>
             <a href = "images.html">Work</a>
-            <a href = "contact.html">Contact</a>
+            <a href = "contact.html" id = "current">Contact</a>
             <a href = "https://instagram.com/eggcellent_pics" target = "_blank"><img src = "pics/social/instagramYellow.svg" alt = "Instagram"></a>
             <a href = "https://facebook.com/profile.php?id=100094181783913" target = "_blank"><img src = "pics/social/facebookYellow.svg" alt = "Facebook"></a>
         </nav>
