--- a/about.html
+++ b/about.html
@@ -10,10 +10,11 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0"> 
     <title>Eggcellent Pics</title>
     <link rel="shortcut icon" href="pics/general/favicon.ico" type="image/x-icon" />
+    <script type="text/javascript" src = "js/all.js"></script>
 </head>
 
 <body>
-    <header class = flexBox>
+    <header class = "flexBox closed">
         <div class = "textBox flexBox title">
             <a href = "index.html">
                 <h1>
@@ -25,6 +26,7 @@
             </a>
         </div>
         <nav class = "flexBox">
+            <a id = "mobileMenu"><img src = "pics/general/mobileMenuIcon.svg" alt = "Mobile Menu Button"></a>
             <a href = "./about.html" id ="current">About</a>
             <a href = "images.html">Work</a>
             <a href = "contact.html">Contact</a>
