--- a/images.html
+++ b/images.html
@@ -41,13 +41,13 @@
             <h2>Annapolis, MD</h2>
             <div class = "flexBox row">
                 <div class = "pic">
-                    <img src = "pics/gallery/USNA/1.JPG" alt = "Picture of Ben">
+                    <img src = "pics/gallery/USNA/1.JPG" alt = "View from the Naval Academy">
                 </div>
                 <div class = "pic">
-                    <img src = "pics/gallery/USNA/2.JPG" alt = "Picture of Ben">
+                    <img src = "pics/gallery/USNA/2.JPG" alt = "R/V Virgina pulling into port">
                 </div>
                 <div class = "pic">
-                    <img src = "pics/gallery/USNA/3.JPG" alt = "Picture of Ben">
+                    <img src = "pics/gallery/USNA/3.JPG" alt = "R/V Virgina pulling into port">
                 </div>
             </div>
        </section>
@@ -56,24 +56,24 @@
         <h2>Lake Winnipesaukee, NH</h2>
         <div class = "flexBox row">
             <div class = "pic">
-                <img src = "pics/gallery/Winnie4July/1.JPG" alt = "Picture of Ben">
+                <img src = "pics/gallery/Winnie4July/1.JPG" alt = "Fireworks on Lake Winnipesaukee">
             </div>
             <div class = "pic">
-                <img src = "pics/gallery/Winnie4July/2.JPG" alt = "Picture of Ben">
+                <img src = "pics/gallery/Winnie4July/2.JPG" alt = "Fireworks on Lake Winnipesauken">
             </div>
             <div class = "pic">
-                <img src = "pics/gallery/Winnie4July/3.JPG" alt = "Picture of Ben">
+                <img src = "pics/gallery/Winnie4July/3.JPG" alt = "Fireworks on Lake Winnipesauken">
             </div>
         </div>
         <div class = "flexBox row">
             <div class = "pic">
-                <img src = "pics/gallery/Winnie4July/4.JPG" alt = "Picture of Ben">
+                <img src = "pics/gallery/Winnie4July/4.JPG" alt = "Fireworks on Lake Winnipesauke">
             </div>
             <div class = "pic">
-                <img src = "pics/gallery/Winnie4July/5.JPG" alt = "Picture of Ben">
+                <img src = "pics/gallery/Winnie4July/5.JPG" alt = "Fireworks on Lake Winnipesauke">
             </div>
             <div class = "pic">
-                <img src = "pics/gallery/Winnie4July/6.JPG" alt = "Picture of Ben">
+                <img src = "pics/gallery/Winnie4July/6.JPG" alt = "Fireworks on Lake Winnipesauke">
             </div>
         </div>
    </section>
