--- a/index.html
+++ b/index.html
@@ -40,24 +40,24 @@
         <section class = "titlePics flexBox">
             <div class = "row flexBox">
                 <div class = "pic flexBox">
-                    <img src = "pics/general/titleImg1.JPG" alr = "Person in front of fireworks on Lake Winnipesaukee">
+                    <a class = "imgLink" href = "./images.html#2023-fireworks"><img src = "pics/general/titleImg1.JPG" alt = "Person in front of fireworks on Lake Winnipesaukee"></a>
                     <p>4th of July Fireworks</p>
                     <p>Lake Winnipesaukee, NH</p>
                 </div>
                 <div class = "pic flexBox">
-                    <img src = "pics/general/titleImg2.JPG" alt = "R/V Virigia docking in Annapolis harbor">
+                    <a class = "imgLink" href = "./images.html#usna-sunset"><img src = "pics/general/titleImg2.JPG" alt = "R/V Virigia docking in Annapolis harbor"></a>
                     <p>R/V Virgina</p>
                     <p>Annapolis, MD</p>
                 </div>
             </div>
             <div class = "row flexBox">
                 <div class = "pic flexBox">
-                    <img src = "pics/general/titleImg3.JPG" alt = "Sailboat at anchor in Annapolis harbor">
+                    <a class = "imgLink" href = "./images.html#usna-sunset"><img src = "pics/general/titleImg3.JPG" alt = "Sailboat at anchor in Annapolis harbor"></a>
                     <p>Safe Harbor</p>
                     <p>Annapolis, MD</p>
                 </div>
                 <div class = "pic flexBox">
-                    <img src = "pics/general/titleImg4.JPG" alt = "Sunset on Lake Winnipesaukee">
+                    <a class = "imgLink" href = "./images.html#2023-fireworks"><img src = "pics/general/titleImg4.JPG" alt = "Sunset on Lake Winnipesaukee"></a>
                     <p>New England Sunset</p>
                     <p>Lake Winnipesaukee, NH</p>
                 </div>
