--- a/images.html
+++ b/images.html
@@ -36,7 +36,7 @@
     </header>
     
     <main>
-       <section class = "gallery flexBox">
+       <section id = "usna-sunset" class = "gallery flexBox">
             <h1>Around the Naval Academy</h1>
             <h2>Annapolis, MD</h2>
             <div class = "flexBox row">
@@ -51,7 +51,7 @@
                 </div>
             </div>
        </section>
-       <section class = "gallery flexBox">
+       <section id = "2023-fireworks" class = "gallery flexBox">
         <h1>New England 4th of July</h1>
         <h2>Lake Winnipesaukee, NH</h2>
         <div class = "flexBox row">
